--- a/Ejemplos_QC_Financial.ipynb
+++ b/Ejemplos_QC_Financial.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "x = Qcf.QCCurrency()"
+    "Objetos para representar una divisa. En estos momentos sólo las siguientes divisas están implementadas:\n",
+    "\n",
+    "- BRL\n",
+    "- CAD\n",
+    "- CLF (esta es una representación del índice de inflación chileno UF como divisa)\n",
+    "- CLP\n",
+    "- EUR\n",
+    "- GBP\n",
+    "- JPY\n",
+    "- MXN\n",
+    "- USD\n",
+    "\n",
+    "Si se requiere otra, solicitarlo ingresando un *issue* en el [git repo](https://github.com/adiaz-efaa/derivative-valuation-engine) del proyecto."
    ]
   },
   {
@@ -63,16 +73,23 @@
     }
    ],
    "source": [
+    "x = Qcf.QCCurrency()\n",
     "x.get_iso_code()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alta de divisas CLP, USD y JPY (USD se puede instanciar también de forma explícita)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Moneda CLP y USD\n",
     "clp = Qcf.QCCLP()\n",
     "usd = Qcf.QCUSD()\n",
     "jpy = Qcf.QCJPY()\n",
@@ -80,51 +97,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos: `get_name`, `get_iso_code`, `get_iso_number`, `get_decimal_places` y `amount`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El método `amount`debe utilizarse cuando se debe pagar o recibir un monto resultado de un cálculo. De esta forma, el monto se redondea al número correcto de decimales en la divisa (que se obtiene con `get_decimal_places`). Por ejemplo, en CLP, se redondea a 2 decimales ya que en esta divisa no se utilizan los centavos."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chilean Peso\n",
-      "CLP\n",
-      "152\n",
-      "0\n",
-      "100.0\n",
+      "Nombre: Chilean Peso\n",
+      "Código ISO: CLP\n",
+      "Número ISO: 152\n",
+      "Número de decimales: 0\n",
+      "Cantidad 100.123456 con el número correcto de decimales: 100.0\n",
       "\n",
-      "U. S. Dollar\n",
-      "USD\n",
-      "840\n",
-      "2\n",
-      "100.12\n",
+      "Nombre: U. S. Dollar\n",
+      "Código ISO: USD\n",
+      "Número ISO: 840\n",
+      "Número de decimales: 2\n",
+      "Cantidad 100.123456 con el número correcto de decimales: 100.12\n",
       "\n",
-      "Japanese Yen\n",
-      "JPY\n",
-      "392\n",
-      "2\n",
-      "100.12\n",
+      "Nombre: Japanese Yen\n",
+      "Código ISO: JPY\n",
+      "Número ISO: 392\n",
+      "Número de decimales: 2\n",
+      "Cantidad 100.123456 con el número correcto de decimales: 100.12\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Métodos: get_name, get_iso_code, get_iso_number, get_decimal_places, amount\n",
+    "cantidad = 100.123456\n",
     "for moneda in monedas:\n",
-    "    print(moneda.get_name())\n",
-    "    print(moneda.get_iso_code())\n",
-    "    print(moneda.get_iso_number())\n",
-    "    print(moneda.get_decimal_places())\n",
-    "    print(moneda.amount(100.123456))\n",
+    "    print(\"Nombre: {}\".format(moneda.get_name()))\n",
+    "    print(\"Código ISO: {}\".format(moneda.get_iso_code()))\n",
+    "    print(\"Número ISO: {}\".format(moneda.get_iso_number()))\n",
+    "    print(\"Número de decimales: {}\".format(moneda.get_decimal_places()))\n",
+    "    print(\"Cantidad {} con el número correcto de decimales: {}\".format(cantidad, moneda.amount(100.123456)))\n",
     "    print()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Fechas\n",
     "Las fechas se representan con objetos de tipo QCDate. Para inicializar un QCDate se requiere el día, el mes y el año de la fecha.  También se puede inicializar sin valor (default constructor) en cuyo caso se obtendrá el 12-1-1969."
@@ -132,9 +161,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
+   "source": [
+    "### Constructores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Inicializar sin valor. Se muestra además el método `description()`."
    ]
@@ -142,9 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -163,41 +195,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Inicializar con una fecha específica. En este caso, el contructor realiza una validación de los parámetros iniciales."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14-09-2018\n",
-      "14-9-2018\n"
+      "Método description: 14-09-2018\n",
+      "Print de Python: 14-9-2018\n"
      ]
     }
    ],
    "source": [
     "fecha1= Qcf.QCDate(14, 9, 2018) # día, mes, año\n",
-    "print(fecha1.description(True))\n",
-    "print(fecha1)"
+    "print(\"Método description: {}\".format(fecha1.description(True)))\n",
+    "print(\"Print de Python: {}\".format(fecha1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Error al tratar de construir una fecha inválida."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -215,17 +248,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getters y Setters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17-10-2019\n"
+      "Fecha: 17-10-2019\n"
      ]
     }
    ],
@@ -234,23 +272,21 @@
     "fecha1.set_day(17)\n",
     "fecha1.set_month(10)\n",
     "fecha1.set_year(2019)\n",
-    "print(fecha1.description(True))"
+    "print(\"Fecha: {}\".format(fecha1.description(True)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n",
-      "10\n",
-      "2019\n",
+      "Día: 17\n",
+      "Mes: 10\n",
+      "Año: 2019\n",
       "<class 'finrisk.QC_Financial_3.WeekDay'>\n",
       "THU\n"
      ]
@@ -258,118 +294,214 @@
    ],
    "source": [
     "# Métodos day, month, year, weekday\n",
-    "print(fecha1.day())\n",
-    "print(fecha1.month())\n",
-    "print(fecha1.year())\n",
-    "dia_semana = fecha1.week_day() # Retorna un enum QC_Financial.WeekDay \n",
-    "print(type(dia_semana))\n",
-    "print(dia_semana)"
+    "print(\"Día: {}\".format(fecha1.day()))\n",
+    "print(\"Mes: {}\".format(fecha1.month()))\n",
+    "print(\"Año: {}\".format(fecha1.year()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método `week_day`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Retorna una variable de tipo `enum QC_Financial.WeekDay` que representa el día de la semana que corresponde a la fecha."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17-10-2019\n",
-      "17-11-2019\n"
+      "Tipo del retorno: <class 'finrisk.QC_Financial_3.WeekDay'>\n",
+      "Día de la semana: THU\n"
      ]
     }
    ],
    "source": [
-    "# Método add_months\n",
-    "fecha2 = fecha1.add_months(1) # Suma n meses a fecha1 sin cambiar el valor de fecha1\n",
-    "print(fecha1.description(True))\n",
-    "print(fecha2.description(True))"
+    "dia_semana = fecha1.week_day() \n",
+    "print(\"Tipo del retorno: {}\".format(type(dia_semana)))\n",
+    "print(\"Día de la semana: {}\".format(dia_semana))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método `add_months`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suma **n meses** a `fecha1` y retorna esa nueva fecha sin cambiar el valor de `fecha1`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17-10-2019\n",
-      "16-11-2019\n"
+      "fecha1: 17-10-2019\n",
+      "fecha2: 17-11-2019\n"
      ]
     }
    ],
    "source": [
-    "# Método add_days\n",
-    "fecha3 = fecha1.add_days(30) # Suma n días a fecha1 sin cambiar el valor de fecha1\n",
-    "print(fecha1.description(True))\n",
-    "print(fecha3.description(True))"
+    "num_meses = 1\n",
+    "fecha2 = fecha1.add_months(num_meses)\n",
+    "print(\"fecha1: {}\".format(fecha1.description(True)))\n",
+    "print(\"fecha2: {}\".format(fecha2.description(True)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método `add_days`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suma **n días** a `fecha1` sin cambiar el valor de `fecha1`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n",
-      "-30\n"
+      "fecha1: 17-10-2019\n",
+      "fecha3: 16-11-2019\n"
      ]
     }
    ],
    "source": [
-    "# Método day_diff\n",
-    "print(fecha1.day_diff(fecha3)) # Si fecha3 > fecha1 entonces el resultado es positivo\n",
-    "print(fecha3.day_diff(fecha1))"
+    "num_dias = 30\n",
+    "fecha3 = fecha1.add_days(num_dias)\n",
+    "print(\"fecha1: {}\".format(fecha1.description(True)))\n",
+    "print(\"fecha3: {}\".format(fecha3.description(True)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método `day_dif`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calcula la diferencia en días con otra fecha. Si la otra fecha es mayor el resultado es positivo, si no, es negativo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "False\n",
-      "False\n"
+      "fecha1.day_diff(fecha3): 30 (días)\n",
+      "fecha3.day_diff(fecha1): -30 (días)\n"
      ]
     }
    ],
    "source": [
-    "# Las fechas pueden compararse entre sí\n",
-    "print(fecha1 == fecha2)\n",
-    "print(fecha1 != fecha2)\n",
-    "print(fecha1 < fecha2)\n",
-    "print(fecha1 <= fecha2)\n",
-    "print(fecha1 > fecha2)\n",
-    "print(fecha1 >= fecha2)"
+    "# Dado que fecha3 > fecha1 entonces el resultado es positivo\n",
+    "print(\"fecha1.day_diff(fecha3): {} (días)\".format(fecha1.day_diff(fecha3)))\n",
+    "\n",
+    "# Se invierten los roles y el resultado es negativo\n",
+    "print(\"fecha3.day_diff(fecha1): {} (días)\".format(fecha3.day_diff(fecha1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Orden en `QCDate`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El orden de `QCDate` permite que las fechas pueden compararse entre si."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fecha1: 17-10-2019\n",
+      "fecha2: 17-11-2019\n",
+      "fecha1 == fecha2: False\n",
+      "fecha1 != fecha2: True\n",
+      "fecha1 < fecha2: True\n",
+      "fecha1 <= fecha2: True\n",
+      "fecha1 > fecha2: False\n",
+      "fecha1 >= fecha2: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"fecha1: {}\".format(fecha1))\n",
+    "print(\"fecha2: {}\".format(fecha2))\n",
+    "print(\"fecha1 == fecha2: {}\".format(fecha1 == fecha2))\n",
+    "print(\"fecha1 != fecha2: {}\".format(fecha1 != fecha2))\n",
+    "print(\"fecha1 < fecha2: {}\".format(fecha1 < fecha2))\n",
+    "print(\"fecha1 <= fecha2: {}\".format(fecha1 <= fecha2))\n",
+    "print(\"fecha1 > fecha2: {}\".format(fecha1 > fecha2))\n",
+    "print(\"fecha1 >= fecha2: {}\".format(fecha1 >= fecha2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Un objeto `QCDate` es *hashable*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esto permite que las fechas puedan usarse como `key` en un `dict`de Python. El hash que se utiliza coincide con la representación como entero de uan fecha que se utiliza en Excel."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -380,37 +512,52 @@
     }
    ],
    "source": [
-    "# Un objeto QCDate es hashable, por lo tanto puede usarse como llave en un dict.\n",
-    "# El hash que retorna coincide con la representación como entero de Excel.\n",
     "print(fecha1.__hash__())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método `build_qcdate_from_string`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se trata de un *factory method* que permite inicializar un objeto `QCDate` a partir de un `string`.\n",
+    "El formato del `string` debe ser yyyy&mm&dd donde & es un separador arbitrario."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01-01-2020\n",
-      "02-01-2020\n",
-      "03-01-2020\n"
+      "2020-01-01: 2020-01-01\n",
+      "2020/01/02: 2020-01-02\n",
+      "2020&01&03: 2020-01-03\n"
      ]
     }
    ],
    "source": [
-    "# Convenience method que permite inicializar un QCDate a partir de un string.\n",
-    "# El formato del string debe ser yyyy&mm&dd donde & es un separador arbitrario.\n",
-    "fecha4 = Qcf.build_qcdate_from_string('2020-01-01')\n",
-    "print(fecha4.description(True))\n",
-    "fecha4 = Qcf.build_qcdate_from_string('2020/01/02')\n",
-    "print(fecha4.description(True))\n",
-    "fecha4 = Qcf.build_qcdate_from_string('2020&01&03')\n",
-    "print(fecha4.description(True))"
+    "str1 = '2020-01-01'\n",
+    "str2 = '2020/01/02'\n",
+    "str3 = '2020&01&03'\n",
+    "\n",
+    "fecha4 = Qcf.build_qcdate_from_string(str1)\n",
+    "print((str1 + \": {}\").format(fecha4.description(False)))\n",
+    "\n",
+    "fecha4 = Qcf.build_qcdate_from_string(str2)\n",
+    "print((str2 + \": {}\").format(fecha4.description(False)))\n",
+    "\n",
+    "fecha4 = Qcf.build_qcdate_from_string(str3)\n",
+    "print((str3 + \": {}\").format(fecha4.description(False)))"
    ]
   },
   {
@@ -2954,7 +3101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -2963,7 +3110,7 @@
    "sideBar": true,
    "skip_h1_title": true,
    "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
+   "title_sidebar": "Contenidos",
    "toc_cell": false,
    "toc_position": {
     "height": "675.455px",
