Empieza ejemplo 4 decimales para RF local.

--- a/Ejemplos_QC_Financial_2.ipynb
+++ b/Ejemplos_QC_Financial_2.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-08T16:54:04.945384Z",
-     "start_time": "2021-07-08T16:54:04.932945Z"
+     "end_time": "2021-09-16T13:32:48.515628Z",
+     "start_time": "2021-09-16T13:32:48.500695Z"
     }
    },
    "outputs": [],
@@ -40,8 +40,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-08T16:54:04.950383Z",
-     "start_time": "2021-07-08T16:54:04.947123Z"
+     "end_time": "2021-09-16T13:32:50.290073Z",
+     "start_time": "2021-09-16T13:32:50.283037Z"
     }
    },
    "outputs": [],
@@ -67,8 +67,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-08T16:54:04.955759Z",
-     "start_time": "2021-07-08T16:54:04.951892Z"
+     "end_time": "2021-09-16T13:32:52.061320Z",
+     "start_time": "2021-09-16T13:32:52.055003Z"
     }
    },
    "outputs": [],
@@ -91,8 +91,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-08T16:54:04.961907Z",
-     "start_time": "2021-07-08T16:54:04.958285Z"
+     "end_time": "2021-09-16T13:32:57.385027Z",
+     "start_time": "2021-09-16T13:32:57.378390Z"
     }
    },
    "outputs": [
@@ -142,8 +142,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-08T16:54:04.972625Z",
-     "start_time": "2021-07-08T16:54:04.963438Z"
+     "end_time": "2021-09-16T13:33:15.777728Z",
+     "start_time": "2021-09-16T13:33:15.762828Z"
     }
    },
    "outputs": [],
@@ -165,19 +165,21 @@
     "es_bono = False\n",
     "\n",
     "# Se da de alta el objeto\n",
-    "fixed_rate_leg = Qcf.LegFactory.build_bullet_fixed_rate_leg(rp,\n",
-    "                                                            fecha_inicio,\n",
-    "                                                            fecha_final,\n",
-    "                                                            bus_adj_rule,\n",
-    "                                                            periodicidad,\n",
-    "                                                            periodo_irregular,\n",
-    "                                                            calendario,\n",
-    "                                                            lag_pago,\n",
-    "                                                            nominal,\n",
-    "                                                            amort_es_flujo,\n",
-    "                                                            tasa_cupon,\n",
-    "                                                            moneda,\n",
-    "                                                            es_bono)"
+    "fixed_rate_leg = Qcf.LegFactory.build_bullet_fixed_rate_leg(\n",
+    "    rp,\n",
+    "    fecha_inicio,\n",
+    "    fecha_final,\n",
+    "    bus_adj_rule,\n",
+    "    periodicidad,\n",
+    "    periodo_irregular,\n",
+    "    calendario,\n",
+    "    lag_pago,\n",
+    "    nominal,\n",
+    "    amort_es_flujo,\n",
+    "    tasa_cupon,\n",
+    "    moneda,\n",
+    "    es_bono\n",
+    ")"
    ]
   },
   {
