Comment cell that copies library.

--- a/Ejemplos_qcfinancial_3.ipynb
+++ b/Ejemplos_qcfinancial_3.ipynb
@@ -19,16 +19,16 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-17T23:13:44.810276Z",
-     "iopub.status.busy": "2023-07-17T23:13:44.810086Z",
-     "iopub.status.idle": "2023-07-17T23:13:44.954637Z",
-     "shell.execute_reply": "2023-07-17T23:13:44.953737Z",
-     "shell.execute_reply.started": "2023-07-17T23:13:44.810255Z"
+     "iopub.execute_input": "2023-07-24T00:28:50.481081Z",
+     "iopub.status.busy": "2023-07-24T00:28:50.480221Z",
+     "iopub.status.idle": "2023-07-24T00:28:50.487263Z",
+     "shell.execute_reply": "2023-07-24T00:28:50.486352Z",
+     "shell.execute_reply.started": "2023-07-24T00:28:50.481011Z"
     }
    },
    "outputs": [],
    "source": [
-    "!cp ../derivative-valuation-engine/QC_DVE_CORE/cmake-build-release/qcfinancial.cpython-311-darwin.so ."
+    "# !cp ../derivative-valuation-engine/QC_DVE_CORE/cmake-build-release/qcfinancial.cpython-311-darwin.so ."
    ]
   },
   {
