Nuevo NB con ejemplo de Fwd de BTU. Mini correcciones.

--- a/Ejemplos_qcfinancial_4.ipynb
+++ b/Ejemplos_qcfinancial_4.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se muestra el ejemplo de valorización de un bono bullet a tasa fija con las convenciones de la Bolsa de Comercio. Para el ejemplo usamos las características del BTU0150326.\n",
+    "Se muestra el ejemplo de valorización de un bono bullet a tasa fija con las convenciones de la Bolsa de Comercio y un forward bond con el mismo instrumento. Para el ejemplo usamos las características del BTU0150326.\n",
     "\n",
     "Se dan de alta los parámetros requeridos para instanciar un objeto de tipo `FixedRateLeg`."
    ]
@@ -181,8 +181,8 @@
      "shell.execute_reply.started": "2024-01-04T22:42:05.938033Z"
     },
     "ExecuteTime": {
-     "end_time": "2024-04-19T12:59:08.343778Z",
-     "start_time": "2024-04-19T12:59:08.329264Z"
+     "end_time": "2024-04-19T14:18:35.370601Z",
+     "start_time": "2024-04-19T14:18:35.361787Z"
     }
    },
    "source": [
@@ -223,7 +223,7 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 24
   },
   {
    "cell_type": "markdown",
@@ -243,8 +243,8 @@
      "shell.execute_reply.started": "2024-01-04T22:42:05.946082Z"
     },
     "ExecuteTime": {
-     "end_time": "2024-04-19T12:59:10.621309Z",
-     "start_time": "2024-04-19T12:59:10.617218Z"
+     "end_time": "2024-04-19T14:18:42.788272Z",
+     "start_time": "2024-04-19T14:18:42.784181Z"
     }
    },
    "source": [
@@ -252,7 +252,7 @@
     "bono_chileno = qcf.ChileanFixedRateBond(pata_bono, tera)"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 25
   },
   {
    "cell_type": "markdown",
@@ -270,8 +270,8 @@
      "shell.execute_reply.started": "2024-01-04T22:42:05.952058Z"
     },
     "ExecuteTime": {
-     "end_time": "2024-04-19T13:06:49.608341Z",
-     "start_time": "2024-04-19T13:06:49.603910Z"
+     "end_time": "2024-04-19T14:18:54.318114Z",
+     "start_time": "2024-04-19T14:18:54.311956Z"
     }
    },
    "source": [
@@ -297,14 +297,12 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Con esto el valor a pagar es:"
-   ]
+   "source": "Con esto el valor a pagar expresado en CLP y con el nominal de la operación es:"
   },
   {
    "cell_type": "code",
@@ -317,13 +315,13 @@
      "shell.execute_reply.started": "2024-01-04T22:42:05.959256Z"
     },
     "ExecuteTime": {
-     "end_time": "2024-04-19T13:06:52.812942Z",
-     "start_time": "2024-04-19T13:06:52.808346Z"
+     "end_time": "2024-04-19T14:20:53.350903Z",
+     "start_time": "2024-04-19T14:20:53.346502Z"
     }
    },
    "source": [
     "nominal = 30_000\n",
-    "valor_uf = 35_956.37\n",
+    "valor_uf = 36_064.24\n",
     "valor_pago = nominal / 100.0 * precio * valor_par * valor_uf\n",
     "print(f'Valor a pagar: {valor_pago:,.0f}')"
    ],
@@ -332,11 +330,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valor a pagar: 1,041,849,652\n"
+      "Valor a pagar: 1,044,975,227\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -346,8 +344,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T13:30:25.250545Z",
-     "start_time": "2024-04-19T13:30:25.236723Z"
+     "end_time": "2024-04-19T14:21:08.054173Z",
+     "start_time": "2024-04-19T14:21:08.050360Z"
     }
    },
    "cell_type": "code",
@@ -357,35 +355,35 @@
     "tasa_descuento = .01 # Lineal Act/360"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T13:31:06.817659Z",
-     "start_time": "2024-04-19T13:31:06.814166Z"
+     "end_time": "2024-04-19T14:21:19.139668Z",
+     "start_time": "2024-04-19T14:21:19.136192Z"
     }
    },
    "cell_type": "code",
    "source": "vp_tasa_contrato = valor_pago / (1 + tasa_descuento * plazo / 360)",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 29
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Por otro lado, la TIR de mercado a fecha de valorización es 3.15%. Por lo que el valor presente del bono a fecha de valorización es:"
+   "source": "Por otro lado, suponiendo una TIR de mercado a fecha de valorización de 3.15%, resulta que el valor presente del bono a fecha de valorización es:"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T13:37:15.900750Z",
-     "start_time": "2024-04-19T13:37:15.896216Z"
+     "end_time": "2024-04-19T14:22:12.985286Z",
+     "start_time": "2024-04-19T14:22:12.980568Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "tir_hoy = qcf.QCInterestRate(.0355, qcf.QCAct365(), qcf.QCCompoundWf())\n",
+    "tir_hoy = qcf.QCInterestRate(.0315, qcf.QCAct365(), qcf.QCCompoundWf())\n",
     "valor_uf_hoy = 35_984.18\n",
     "valor_presente_hoy = bono_chileno.present_value(fecha_valorizacion, tir_hoy)\n",
     "precio_hoy = bono_chileno.precio2(fecha_valorizacion, tir_hoy, 6)\n",
@@ -393,25 +391,25 @@
     "valor_hoy = nominal / 100.0 * precio_hoy * valor_par_hoy * valor_uf_hoy"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T13:38:00.819855Z",
-     "start_time": "2024-04-19T13:38:00.816807Z"
+     "end_time": "2024-04-19T14:22:14.283015Z",
+     "start_time": "2024-04-19T14:22:14.279027Z"
     }
    },
    "cell_type": "code",
    "source": "m2m = valor_hoy - vp_tasa_contrato",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T14:16:31.069075Z",
-     "start_time": "2024-04-19T14:16:31.065889Z"
+     "end_time": "2024-04-19T14:22:17.703833Z",
+     "start_time": "2024-04-19T14:22:17.699473Z"
     }
    },
    "cell_type": "code",
@@ -421,11 +419,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valor de mercado (M2M): -15,783,877 CLP\n"
+      "Valor de mercado (M2M): -7,995,840 CLP\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 32
   }
  ],
  "metadata": {
