NB 3_Construccion_Operaciones.ipynb

--- a/1_Objetos_Fundamentales.ipynb
+++ b/1_Objetos_Fundamentales.ipynb
@@ -1665,9 +1665,12 @@
    },
    "source": [
     "Están disponibles los siguientes 3 tipos de funciones (donde $yf$ es la fracción de año asociada a la tasa de valor $r$):\n",
-    "- QCLinearWf     ---> $1 + r \\cdot yf$\n",
-    "- QCCompundWf    ---> $1 + r \\cdot yf$\n",
-    "- QCContinousWf  ---> $exp(r \\cdot yf)$"
+    "\n",
+    "- QCLinearWf:     $\\rightarrow 1 + r \\cdot yf$\n",
+    "\n",
+    "- QCCompoundWf:    $\\rightarrow \\left(1 + r \\right)^{yf}$\n",
+    "\n",
+    "- QCContinousWf:  $\\rightarrow exp(r \\cdot yf)$"
    ]
   },
   {
