Se agrega el notebook 6_Curva_SOFR.ipynb . Se muestra como calcular la curva SOFR por bootstrapping utilizando qcfinancial.

--- a/1_Objetos_Fundamentales.ipynb
+++ b/1_Objetos_Fundamentales.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:01.933321Z",
@@ -36,11 +36,11 @@
     },
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-22T10:45:47.925077Z",
-     "iopub.status.busy": "2024-06-22T10:45:47.924715Z",
-     "iopub.status.idle": "2024-06-22T10:45:48.757794Z",
-     "shell.execute_reply": "2024-06-22T10:45:48.756937Z",
-     "shell.execute_reply.started": "2024-06-22T10:45:47.925046Z"
+     "iopub.execute_input": "2024-06-22T19:02:18.686399Z",
+     "iopub.status.busy": "2024-06-22T19:02:18.686031Z",
+     "iopub.status.idle": "2024-06-22T19:02:19.547512Z",
+     "shell.execute_reply": "2024-06-22T19:02:19.546539Z",
+     "shell.execute_reply.started": "2024-06-22T19:02:18.686361Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:01.949248Z",
@@ -114,11 +114,11 @@
     },
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-22T10:45:57.420763Z",
-     "iopub.status.busy": "2024-06-22T10:45:57.420463Z",
-     "iopub.status.idle": "2024-06-22T10:45:57.424341Z",
-     "shell.execute_reply": "2024-06-22T10:45:57.423721Z",
-     "shell.execute_reply.started": "2024-06-22T10:45:57.420738Z"
+     "iopub.execute_input": "2024-06-22T19:03:43.389971Z",
+     "iopub.status.busy": "2024-06-22T19:03:43.389546Z",
+     "iopub.status.idle": "2024-06-22T19:03:43.395179Z",
+     "shell.execute_reply": "2024-06-22T19:03:43.394042Z",
+     "shell.execute_reply.started": "2024-06-22T19:03:43.389941Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -154,13 +154,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:01.965206Z",
      "start_time": "2022-01-21T13:43:01.950246Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:04:11.874927Z",
+     "iopub.status.busy": "2024-06-22T19:04:11.874555Z",
+     "iopub.status.idle": "2024-06-22T19:04:11.879340Z",
+     "shell.execute_reply": "2024-06-22T19:04:11.878204Z",
+     "shell.execute_reply.started": "2024-06-22T19:04:11.874894Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -190,9 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:05:19.854285Z",
+     "iopub.status.busy": "2024-06-22T19:05:19.853673Z",
+     "iopub.status.idle": "2024-06-22T19:05:19.858312Z",
+     "shell.execute_reply": "2024-06-22T19:05:19.857368Z",
+     "shell.execute_reply.started": "2024-06-22T19:05:19.854254Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -232,19 +246,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:01.980166Z",
      "start_time": "2022-01-21T13:43:01.967201Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:06:29.769933Z",
+     "iopub.status.busy": "2024-06-22T19:06:29.769594Z",
+     "iopub.status.idle": "2024-06-22T19:06:29.775880Z",
+     "shell.execute_reply": "2024-06-22T19:06:29.775026Z",
+     "shell.execute_reply.started": "2024-06-22T19:06:29.769902Z"
+    },
     "slideshow": {
      "slide_type": "subslide"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Chilean Peso\n",
+      "Código ISO: CLP\n",
+      "Número ISO: 152\n",
+      "Número de decimales: 0\n",
+      "Cantidad 100.123456 con el número correcto de decimales: 100.0000\n",
+      "\n",
+      "Nombre: U. S. Dollar\n",
+      "Código ISO: USD\n",
+      "Número ISO: 840\n",
+      "Número de decimales: 2\n",
+      "Cantidad 100.123456 con el número correcto de decimales: 100.1200\n",
+      "\n",
+      "Nombre: Japanese Yen\n",
+      "Código ISO: JPY\n",
+      "Número ISO: 392\n",
+      "Número de decimales: 2\n",
+      "Cantidad 100.123456 con el número correcto de decimales: 100.1200\n",
+      "\n",
+      "Nombre: Peso argentino\n",
+      "Código ISO: ARS\n",
+      "Número ISO: 32\n",
+      "Número de decimales: 0\n",
+      "Cantidad 100.123456 con el número correcto de decimales: 100.0000\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "cantidad = 100.123456\n",
     "for moneda in monedas:\n",
@@ -323,19 +375,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:01.996123Z",
      "start_time": "2022-01-21T13:43:01.981164Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:08:54.628885Z",
+     "iopub.status.busy": "2024-06-22T19:08:54.628548Z",
+     "iopub.status.idle": "2024-06-22T19:08:54.634870Z",
+     "shell.execute_reply": "2024-06-22T19:08:54.633843Z",
+     "shell.execute_reply.started": "2024-06-22T19:08:54.628857Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fecha: 1969-01-12\n"
+     ]
+    }
+   ],
    "source": [
     "fecha = qcf.QCDate()\n",
     "print(f\"Fecha: {fecha}\")"
@@ -356,19 +423,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.011084Z",
      "start_time": "2022-01-21T13:43:01.997121Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:09:09.099509Z",
+     "iopub.status.busy": "2024-06-22T19:09:09.099160Z",
+     "iopub.status.idle": "2024-06-22T19:09:09.104197Z",
+     "shell.execute_reply": "2024-06-22T19:09:09.103321Z",
+     "shell.execute_reply.started": "2024-06-22T19:09:09.099478Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fecha: 2024-09-14\n"
+     ]
+    }
+   ],
    "source": [
     "fecha1 = qcf.QCDate(14, 9, 2024)  # día, mes, año\n",
     "print(f\"Fecha: {fecha1}\")"
@@ -389,19 +471,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.027041Z",
      "start_time": "2022-01-21T13:43:02.012081Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:09:22.236673Z",
+     "iopub.status.busy": "2024-06-22T19:09:22.236303Z",
+     "iopub.status.idle": "2024-06-22T19:09:22.245028Z",
+     "shell.execute_reply": "2024-06-22T19:09:22.243764Z",
+     "shell.execute_reply.started": "2024-06-22T19:09:22.236640Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid day for month = 2\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    fecha0 = qcf.QCDate(31, 2, 2024)  # ¡¡¡ 31 de febrero !!!\n",
@@ -418,9 +515,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:09:49.684363Z",
+     "iopub.status.busy": "2024-06-22T19:09:49.683983Z",
+     "iopub.status.idle": "2024-06-22T19:09:49.689349Z",
+     "shell.execute_reply": "2024-06-22T19:09:49.688535Z",
+     "shell.execute_reply.started": "2024-06-22T19:09:49.684332Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "description(True): 12-01-1969\n",
+      "description(False): 1969-01-12\n",
+      "iso_code(): 1969-01-12\n",
+      "__str__: 1969-01-12\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"description(True): {fecha.description(True)}\")\n",
     "print(f\"description(False): {fecha.description(False)}\")\n",
@@ -456,19 +572,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.042999Z",
      "start_time": "2022-01-21T13:43:02.028038Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:11:02.787813Z",
+     "iopub.status.busy": "2024-06-22T19:11:02.787460Z",
+     "iopub.status.idle": "2024-06-22T19:11:02.792831Z",
+     "shell.execute_reply": "2024-06-22T19:11:02.791754Z",
+     "shell.execute_reply.started": "2024-06-22T19:11:02.787783Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fecha: 2024-10-17\n"
+     ]
+    }
+   ],
    "source": [
     "fecha1.set_day(17)\n",
     "fecha1.set_month(10)\n",
@@ -491,19 +622,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.058956Z",
      "start_time": "2022-01-21T13:43:02.043995Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:11:21.090775Z",
+     "iopub.status.busy": "2024-06-22T19:11:21.090418Z",
+     "iopub.status.idle": "2024-06-22T19:11:21.095648Z",
+     "shell.execute_reply": "2024-06-22T19:11:21.094826Z",
+     "shell.execute_reply.started": "2024-06-22T19:11:21.090746Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Día: 17\n",
+      "Mes: 10\n",
+      "Año: 2024\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Día: {fecha1.day()}\")\n",
     "print(f\"Mes: {fecha1.month()}\")\n",
@@ -538,19 +686,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.073916Z",
      "start_time": "2022-01-21T13:43:02.060950Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:11:44.220610Z",
+     "iopub.status.busy": "2024-06-22T19:11:44.220016Z",
+     "iopub.status.idle": "2024-06-22T19:11:44.225165Z",
+     "shell.execute_reply": "2024-06-22T19:11:44.224115Z",
+     "shell.execute_reply.started": "2024-06-22T19:11:44.220580Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipo del retorno: <class 'qcfinancial.WeekDay'>\n",
+      "Día de la semana: WeekDay.THU\n"
+     ]
+    }
+   ],
    "source": [
     "dia_semana = fecha1.week_day()\n",
     "print(f\"Tipo del retorno: {type(dia_semana)}\")\n",
@@ -585,21 +749,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.088876Z",
      "start_time": "2022-01-21T13:43:02.074913Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:12:49.614487Z",
+     "iopub.status.busy": "2024-06-22T19:12:49.614153Z",
+     "iopub.status.idle": "2024-06-22T19:12:49.619195Z",
+     "shell.execute_reply": "2024-06-22T19:12:49.618144Z",
+     "shell.execute_reply.started": "2024-06-22T19:12:49.614457Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fecha1: 2024-10-17\n",
+      "fecha2: 2025-10-17\n"
+     ]
+    }
+   ],
    "source": [
-    "num_meses = 1\n",
+    "num_meses = 12\n",
     "fecha2 = fecha1.add_months(num_meses)\n",
     "print(f\"fecha1: {fecha1}\")\n",
     "print(f\"fecha2: {fecha2}\")"
@@ -633,19 +813,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.104833Z",
      "start_time": "2022-01-21T13:43:02.089873Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:13:39.678418Z",
+     "iopub.status.busy": "2024-06-22T19:13:39.677745Z",
+     "iopub.status.idle": "2024-06-22T19:13:39.682919Z",
+     "shell.execute_reply": "2024-06-22T19:13:39.681906Z",
+     "shell.execute_reply.started": "2024-06-22T19:13:39.678385Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fecha1: 2024-10-17\n",
+      "fecha3: 2024-11-16\n"
+     ]
+    }
+   ],
    "source": [
     "num_dias = 30\n",
     "fecha3 = fecha1.add_days(num_dias)\n",
@@ -681,19 +877,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.120791Z",
      "start_time": "2022-01-21T13:43:02.105831Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:14:32.489963Z",
+     "iopub.status.busy": "2024-06-22T19:14:32.489611Z",
+     "iopub.status.idle": "2024-06-22T19:14:32.495007Z",
+     "shell.execute_reply": "2024-06-22T19:14:32.494144Z",
+     "shell.execute_reply.started": "2024-06-22T19:14:32.489934Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fecha1.day_diff(fecha3): 30 (días)\n",
+      "fecha3.day_diff(fecha1): -30 (días)\n"
+     ]
+    }
+   ],
    "source": [
     "# Dado que fecha3 > fecha1 entonces el resultado es positivo\n",
     "print(f\"fecha1.day_diff(fecha3): {fecha1.day_diff(fecha3)} (días)\")\n",
@@ -730,19 +942,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.136747Z",
      "start_time": "2022-01-21T13:43:02.124780Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:15:00.601704Z",
+     "iopub.status.busy": "2024-06-22T19:15:00.601345Z",
+     "iopub.status.idle": "2024-06-22T19:15:00.607797Z",
+     "shell.execute_reply": "2024-06-22T19:15:00.606811Z",
+     "shell.execute_reply.started": "2024-06-22T19:15:00.601675Z"
+    },
     "slideshow": {
      "slide_type": ""
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fecha1: 2024-10-17\n",
+      "fecha2: 2025-10-17\n",
+      "fecha1 == fecha2: False\n",
+      "fecha1 != fecha2: True\n",
+      "fecha1 < fecha2: True\n",
+      "fecha1 <= fecha2: True\n",
+      "fecha1 > fecha2: False\n",
+      "fecha1 >= fecha2: False\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"fecha1: {fecha1}\")\n",
     "print(f\"fecha2: {fecha2}\")\n",
@@ -782,19 +1016,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.152705Z",
      "start_time": "2022-01-21T13:43:02.137746Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:16:05.422203Z",
+     "iopub.status.busy": "2024-06-22T19:16:05.421856Z",
+     "iopub.status.idle": "2024-06-22T19:16:05.426899Z",
+     "shell.execute_reply": "2024-06-22T19:16:05.426002Z",
+     "shell.execute_reply.started": "2024-06-22T19:16:05.422172Z"
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45582\n"
+     ]
+    }
+   ],
    "source": [
     "print(fecha1.__hash__())"
    ]
@@ -814,15 +1063,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:16:50.139683Z",
+     "iopub.status.busy": "2024-06-22T19:16:50.139344Z",
+     "iopub.status.idle": "2024-06-22T19:16:50.145088Z",
+     "shell.execute_reply": "2024-06-22T19:16:50.144297Z",
+     "shell.execute_reply.started": "2024-06-22T19:16:50.139655Z"
+    },
     "slideshow": {
      "slide_type": "subslide"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor al: 2024-05-23 es 100.02\n"
+     ]
+    }
+   ],
    "source": [
     "serie_de_tiempo = {\n",
     "    qcf.QCDate(22, 5, 2024): 100.01,\n",
@@ -861,19 +1125,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:02.167665Z",
      "start_time": "2022-01-21T13:43:02.153703Z"
     },
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-22T19:17:42.797919Z",
+     "iopub.status.busy": "2024-06-22T19:17:42.797422Z",
+     "iopub.status.idle": "2024-06-22T19:17:42.803631Z",
+     "shell.execute_reply": "2024-06-22T19:17:42.802722Z",
+     "shell.execute_reply.started": "2024-06-22T19:17:42.797888Z"
+    },
     "slideshow": {
      "slide_type": ""
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-01-01: 2020-01-01\n",
+      "2020/01/02: 2020-01-02\n",
+      "2020&01&03: 2020-01-03\n"
+     ]
+    }
+   ],
    "source": [
     "str1 = \"2020-01-01\"\n",
     "str2 = \"2020/01/02\"\n",
