--- a/1_Objetos_Fundamentales.ipynb
+++ b/1_Objetos_Fundamentales.ipynb
@@ -36,11 +36,11 @@
     },
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-22T19:02:18.686399Z",
-     "iopub.status.busy": "2024-06-22T19:02:18.686031Z",
-     "iopub.status.idle": "2024-06-22T19:02:19.547512Z",
-     "shell.execute_reply": "2024-06-22T19:02:19.546539Z",
-     "shell.execute_reply.started": "2024-06-22T19:02:18.686361Z"
+     "iopub.execute_input": "2024-06-23T19:48:01.934127Z",
+     "iopub.status.busy": "2024-06-23T19:48:01.933847Z",
+     "iopub.status.idle": "2024-06-23T19:48:02.561428Z",
+     "shell.execute_reply": "2024-06-23T19:48:02.560725Z",
+     "shell.execute_reply.started": "2024-06-23T19:48:01.934104Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -50,7 +50,8 @@
    "outputs": [],
    "source": [
     "import qcfinancial as qcf\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import sys"
    ]
   },
   {
