--- a/2_Cashflows.ipynb
+++ b/2_Cashflows.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-21T13:43:01.933321Z",
@@ -36,11 +36,11 @@
     },
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-08T12:16:01.941635Z",
-     "iopub.status.busy": "2024-06-08T12:16:01.941462Z",
-     "iopub.status.idle": "2024-06-08T12:16:03.028594Z",
-     "shell.execute_reply": "2024-06-08T12:16:03.027665Z",
-     "shell.execute_reply.started": "2024-06-08T12:16:01.941612Z"
+     "iopub.execute_input": "2024-06-23T19:43:31.413062Z",
+     "iopub.status.busy": "2024-06-23T19:43:31.412695Z",
+     "iopub.status.idle": "2024-06-23T19:43:32.119349Z",
+     "shell.execute_reply": "2024-06-23T19:43:32.118646Z",
+     "shell.execute_reply.started": "2024-06-23T19:43:31.413031Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -50,7 +50,8 @@
    "outputs": [],
    "source": [
     "import qcfinancial as qcf\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import sys"
    ]
   },
   {
